<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/albums"
        android:title="@string/albums" />

    <item
        android:id="@+id/navigation_photos"
        android:icon="@drawable/photos"
        android:title="@string/photos" />

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/users"
        android:title="@string/users" />

</menu>